apps/test/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  labels:
    name: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - test.jakubkubacki.com
      secretName: test-tls
  rules:
    - host: test.jakubkubacki.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test
                port:
                  number: 80
